@@ -1,8 +1,7 @@
 package fr.samlegamer.mcwbiomesoplenty;
 
-import java.util.Arrays;
-import fr.addonslib.api.client.McwColors;
-import fr.samlegamer.addonslib.Finder;
+import java.util.List;
+import fr.addonslib.api.client.ObjectColor;
 import fr.samlegamer.addonslib.client.ColorRegistry;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.client.event.RegisterColorHandlersEvent;
@@ -13,17 +12,17 @@ import net.minecraftforge.fml.common.Mod.EventBusSubscriber.Bus;
 @Mod.EventBusSubscriber(modid = McwBOP.MODID, bus = Bus.MOD, value = Dist.CLIENT)
 public class Client
 {
-	private static final ColorRegistry COLOR = new ColorRegistry(new McwColors(Arrays.asList(
-			Finder.makeIdHedge(McwBOP.MODID, "mahogany"),
-			Finder.makeIdHedge(McwBOP.MODID, "willow"),
-			Finder.makeIdHedge(McwBOP.MODID, "palm"),
-			Finder.makeIdHedge(McwBOP.MODID, "flowering_oak")
-	)));
+	private static final ColorRegistry COLOR = new ColorRegistry(List.of(
+			new ObjectColor(McwBOP.MODID, "mahogany"),
+			new ObjectColor(McwBOP.MODID, "willow"),
+			new ObjectColor(McwBOP.MODID, "palm"),
+			new ObjectColor(McwBOP.MODID, "flowering_oak")
+	));
 
 	@SubscribeEvent
 	public static void colorsBlock(RegisterColorHandlersEvent.Block event)
 	{
-		COLOR.registryBlockColorsAverage(event);
+		COLOR.registryBlockColors(event);
 	}
 
 	@SubscribeEvent
